--- a/fil-data/template/layouts/main.jade
+++ b/fil-data/template/layouts/main.jade
@@ -5,5 +5,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     base(href="/")
     title Fil
+    link(href="http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic&subset=latin,latin-ext", rel="stylesheet", type="text/css")
+    link(href="#{global.cssFilePath}", rel="stylesheet", type="text/css")
   body
     block content
