Add partial support for resolving contents...
…and content assets from other resources via a ContentLookup helper
object.

--- a/fil-data/template/index.jade
+++ b/fil-data/template/index.jade
@@ -4,4 +4,4 @@ block content
   .main-container
     each post, no in posts
       h1 Post #{no}
-      .content !{post.getHtmlContent()}
+      .content !{post.htmlContent}
