--- a/fil-data/template/post.jade
+++ b/fil-data/template/post.jade
@@ -5,4 +5,4 @@ block content
     h1 !{post.title}
     .content
       img(src="#{global.imgRoot}/fff.png")
-    .content !{post.getHtmlContent()}
+    .content !{post.htmlContent}
