--- a/fil-data/template/layouts/main.jade
+++ b/fil-data/template/layouts/main.jade
@@ -4,8 +4,9 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     base(href="/")
-    title Fil
-    link(href="http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic&subset=latin,latin-ext", rel="stylesheet", type="text/css")
+    title #{global.title}
+    link(href="http://fonts.googleapis.com/css?family=Fira+Sans:300&subset=latin,latin-ext", rel="stylesheet", type="text/css")
+    link(href="http://fonts.googleapis.com/css?family=Alegreya:400,700,400italic&subset=latin,latin-ext", rel="stylesheet", type="text/css")
     link(href="#{global.cssFilePath}", rel="stylesheet", type="text/css")
   body
     block content
