--- a/fil-data/template/layouts/main.jade
+++ b/fil-data/template/layouts/main.jade
@@ -1,8 +1,9 @@
 doctype html
-html(lang='en')
+html(lang="en")
   head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(charset="utf-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="robots" content="noindex")
     base(href="/")
     title #{global.title}
     link(href="http://fonts.googleapis.com/css?family=Fira+Sans:300&subset=latin,latin-ext", rel="stylesheet", type="text/css")
