--- a/fil-data/template/styles/colors.styl
+++ b/fil-data/template/styles/colors.styl
@@ -2,6 +2,6 @@ $primary-background = #F9F9F9
 $secondary-background = #FFFFFF
 
 $primary-content = #444444
-$secondary-content = #444444
+//$secondary-content = #444444
 
 $primary-border = #DDDDDD
