--- a/fil-data/template/styles/grid.styl
+++ b/fil-data/template/styles/grid.styl
@@ -2,9 +2,11 @@
   box-sizing border-box
 
 .main-container
-  margin 2rem
-  padding 4rem
-  width 100rem
-  +lt-sm()
-    padding 2rem
-    width calc(100% - 2rem)
+  article
+    margin 2rem
+    padding 4rem
+    width 90rem
+    +lt-sm()
+      padding 1rem
+      margin 0
+      width 100%
