--- a/fil-data/template/index.styl
+++ b/fil-data/template/index.styl
@@ -12,8 +12,11 @@ body
   -webkit-font-smoothing antialiased
 
 .main-container
-  border 1px solid $primary-border
-  background $secondary-background
+  article
+    background: $secondary-background
+    +gt-sm()
+      border 1px solid $primary-border
+      background $secondary-background
 
 ::selection {
   background #0088b2
