Add a very basic comments support via firebase

--- a/fil-data/template/content.jade
+++ b/fil-data/template/content.jade
@@ -4,3 +4,9 @@ block content
   .main-container
     h1 !{content.title}
     .content !{content.htmlContent}
+  div#comments
+
+block scripts
+  script.
+    var id = "#{content.contentId}";
+  script(src="#{global.jsRootPath}/content.js")
