--- a/fil-data/template/layouts/main.jade
+++ b/fil-data/template/layouts/main.jade
@@ -11,3 +11,6 @@ html(lang="en")
     link(href="#{global.cssFilePath}", rel="stylesheet", type="text/css")
   body
     block content
+
+    include ../partials/firebase.jade
+    block scripts
