--- a/fil-data/template/styles/colors.styl
+++ b/fil-data/template/styles/colors.styl
@@ -5,3 +5,28 @@ $primary-content = #444444
 //$secondary-content = #444444
 
 $primary-border = #DDDDDD
+
+$primary = #3F51B5
+$secondary = #303F9F
+$accent = #FF9800
+
+$text_light = #FFF
+$text_dark = #000
+
+// Material
+primary-block()
+  background-color $primary
+  color $text_light
+
+primary-block-text()
+  color $text_light
+
+secondary-block()
+  background-color $secondary
+  color $text_light
+
+accent-block()
+  background-color $accent
+  color $text_light
+
+
