--- a/fil-data/template/styles/typography.styl
+++ b/fil-data/template/styles/typography.styl
@@ -3,7 +3,7 @@ html {
 }
 
 body
-  font-family "Alegreya", serif
+  font-family "Roboto", serif
   font-size 1.3rem
   line-height 2.0rem
   +gt-sm()
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h6, h6
   &, & a
     color: $primary-content
     text-decoration none
-    font-family "Fira Sans", sans-serif
+    font-family "Roboto", sans-serif
     font-size 2.2rem
     line-height 3.0rem
     font-weight 300
