--- a/fil-data/template/index.styl
+++ b/fil-data/template/index.styl
@@ -1,4 +1,9 @@
-@require "styles/mixins" // this needs to be first for others to work properly
+// these two needs to be first for others to work properly
+@require "styles/mixins"
+@require "styles/colors"
+
+// regular inclues
+@require "partials/*"
 @require "styles/*"
 
 body
@@ -6,8 +11,10 @@ body
   color $primary-content
   display flex
   flex-flow column
-  align-items center
-  margin 0
+  align-items stretch
+  margin-bottom 0
+  margin-right 0
+  margin-left 0
   padding 0
   -webkit-font-smoothing antialiased
 
