--- a/fil-data/template/partials/header.styl
+++ b/fil-data/template/partials/header.styl
@@ -26,8 +26,9 @@ app-bar
     background transparent
 
   .logo
-    font-size 24px
+    font-weight 500
+    font-size 20px
     flex-grow 1
     margin 0
     padding-left 16px
-    primary-block-text()
+    color $text_default
