--- a/fil-data/template/styles/colors.styl
+++ b/fil-data/template/styles/colors.styl
@@ -1,32 +1,25 @@
-$primary-background = #F9F9F9
-$secondary-background = #FFFFFF
+$background_body = #FAFAFA
+$background_default = #FFFFFF
+$background_primary = #3F51B5
+$background_secondary = #303F9F
 
-$primary-content = #444444
-//$secondary-content = #444444
-
-$primary-border = #DDDDDD
-
-$primary = #3F51B5
-$secondary = #303F9F
 $accent = #FF9800
 
-$text_light = #FFF
-$text_dark = #000
+$text_default = rgba(255,255,255,1)
+$text_primary = rgba(0,0,0,.87)
+$text_secondary = rgba(0,0,0,.54)
 
 // Material
 primary-block()
-  background-color $primary
-  color $text_light
-
-primary-block-text()
-  color $text_light
+  background-color $background_primary
+  color $text_default
 
 secondary-block()
-  background-color $secondary
-  color $text_light
+  background-color $background_secondary
+  color $text_default
 
 accent-block()
   background-color $accent
-  color $text_light
+  color $text_default
 
 
