--- a/fil-data/template/styles/typography.styl
+++ b/fil-data/template/styles/typography.styl
@@ -1,23 +1,23 @@
-html {
-  font-size 62.5%
-}
-
 body
   font-family "Roboto", serif
-  font-size 1.3rem
-  line-height 2.0rem
-  +gt-sm()
-    font-size 1.8rem
-    line-height 2.7rem
+  font-size 14px
+  line-height 22px
+
+a, a:visited
+  color $accent
 
 h1, h2, h3, h4, h6, h6
-  &, & a
-    color: $primary-content
+  &, & a, & a:visited
+    margin 0
+    font-weight 400
+    color $text_primary
     text-decoration none
     font-family "Roboto", sans-serif
-    font-size 2.2rem
-    line-height 3.0rem
-    font-weight 300
-    +gt-sm()
-      font-size 3.6rem
-      line-height 4rem
+    font-size 24px
+
+h2
+  &, & a, & a:visited
+    font-size 16px
+
+p
+  margin-bottom 22px
