--- a/fil-data/template/index.jade
+++ b/fil-data/template/index.jade
@@ -5,3 +5,5 @@ block content
   .main-container
     each content in page.contents
       include ./partials/post-excerpt
+
+    include ./partials/pagination
