--- a/fil-data/template/partials/header.styl
+++ b/fil-data/template/partials/header.styl
@@ -19,16 +19,17 @@ app-bar
   shadow-1()
   primary-block()
 
-  button
+  h1.logo
     height 36px
-    padding 6px
-    border none
-    background transparent
-
-  .logo
-    font-weight 500
-    font-size 20px
+    line-height 36px
     flex-grow 1
     margin 0
     padding-left 16px
-    color $text_default
+    a
+      display inline-block
+      height 36px
+      line-height 36px
+      font-weight 500
+      font-size 20px
+      color $text_default_light
+      margin 0
