--- a/fil-data/template/partials/post-excerpt.jade
+++ b/fil-data/template/partials/post-excerpt.jade
@@ -1,5 +1,12 @@
-article.card
-  .date #{content.createDate.locale(global.template.locale).format(global.template.dateFormat)}
-  h1
-    a(href=content.getUrl()) #{content.title}
-  .content !{content.htmlExcerpt}
+article.card.excerpt(id="content-#{content.contentId}")
+  .card-contents
+    .date #{content.createDate.locale(global.template.locale).format(global.template.dateFormat)}
+    h1
+      a(href=content.getUrl()) #{content.title}
+    .content !{content.htmlExcerpt}
+  .card-actions
+    a.button.primary(href=content.getUrl())
+      span #{global.template.readContent}
+    .comment-info
+      span.comment-count 0
+      img.icon.comment-icon(src="#{global.imgRoot}/ic_mode_comment_black_24px.svg")
