--- a/fil-data/template/partials/post-excerpt.styl
+++ b/fil-data/template/partials/post-excerpt.styl
@@ -3,3 +3,16 @@ article
     text-transform uppercase
     color $text_secondary
     margin-bottom 10px
+  .card-actions
+    display flex
+    justify-content space-between
+    align-items center
+
+    .comment-info
+      line-height 24px
+      color $text_secondary
+      .comment-count
+        margin-right 6px
+      .icon
+        vertical-align middle
+        opacity $opacity_secondary
