--- a/fil-data/template/styles/typography.styl
+++ b/fil-data/template/styles/typography.styl
@@ -8,16 +8,19 @@ a, a:visited
 
 h1, h2, h3, h4, h6, h6
   &, & a, & a:visited
-    margin 0
+    margin 0 0 24px 0
     font-weight 400
     color $text_primary
     text-decoration none
     font-family "Roboto", sans-serif
     font-size 24px
+    line-height 32px
 
 h2
   &, & a, & a:visited
     font-size 16px
 
 p
-  margin-bottom 22px
+  margin 0
+p+p
+  margin-top 22px
