--- a/fil-data/template/styles/components/card.styl
+++ b/fil-data/template/styles/components/card.styl
@@ -1,8 +1,11 @@
 .card
   border-radius 2px
-  padding 16px
   margin 10px
   background-color $background_default
   color $text_primary
   shadow-1()
+  .card-contents, .card-actions
+    padding 8px 16px
+  .card-actions
+    border-top: 1px solid $border_default
 
