--- a/fil-data/template/index.jade
+++ b/fil-data/template/index.jade
@@ -7,3 +7,6 @@ block content
       include ./partials/post-excerpt
 
     include ./partials/pagination
+
+block scripts
+  script(src="#{global.jsRootPath}/index.js")
