--- a/fil-data/template/partials/post-excerpt.jade
+++ b/fil-data/template/partials/post-excerpt.jade
@@ -1,4 +1,4 @@
-article.card.excerpt(id="content-#{content.contentId}")
+article.card.excerpt(id="#{content.contentId}")
   .card-contents
     .date #{content.createDate.locale(global.template.locale).format(global.template.dateFormat)}
     h1
