--- a/fil-data/template/partials/header.jade
+++ b/fil-data/template/partials/header.jade
@@ -1,6 +1,6 @@
 header
   app-bar
-    button.flat.icon
+    button.flat.icon#menu-toggle
       span
         img(src="#{global.imgRoot}/ic_menu_white_24px.svg")
     h1.logo
