--- a/fil-data/template/styles/colors.styl
+++ b/fil-data/template/styles/colors.styl
@@ -13,21 +13,11 @@ $opacity_disabled = .38
 
 $text_default_light = rgba(255,255,255,1)
 $text_default_dark = rgba(0,0,0,1)
+
 $text_primary = rgba(0,0,0,$opacity_primary)
+$text_primary_light = rgba(255,255,255,$opacity_primary)
+
 $text_secondary = rgba(0,0,0,$opacity_secondary)
+$text_secondary_light = rgba(255,255,255,$opacity_secondary)
+
 $text_disabled = rgba(0,0,0,$opacity_disabled)
-
-// Material
-primary-block()
-  background-color $background_primary
-  color $text_default_light
-
-secondary-block()
-  background-color $background_secondary
-  color $text_default_light
-
-accent-block()
-  background-color $accent
-  color $text_default_light
-
-
