Fix flash of sidenav on page load

--- a/fil-data/template/partials/sidenav.styl
+++ b/fil-data/template/partials/sidenav.styl
@@ -1,6 +1,8 @@
 #sidenav
   background $background_body
   width 350px
+  position fixed
+  transform translate3d(-1000px, 0px, 0px)
 
   .profile-section
     padding 24px
