Add basic Google Analytics support

--- a/fil-data/template/layouts/main.jade
+++ b/fil-data/template/layouts/main.jade
@@ -26,3 +26,4 @@ html(lang="#{global.template.locale}")
     script(src="#{global.jsRootPath}/vendor/sidenav.min.js")
     script(src="#{global.jsRootPath}/global.js")
     block scripts
+    include ../partials/ganalytics
