Read sidenav name & bio from template config

--- a/fil-data/template/partials/sidenav.jade
+++ b/fil-data/template/partials/sidenav.jade
@@ -1,8 +1,8 @@
 #sidenav
   .profile-section
     img.profile(src="#{global.imgRoot}/profile.jpg")
-    h1.name Umut Benzer
-    h2.mini-bio Software Engineer in Berlin
+    h1.name #{global.template.authorName}
+    h2.mini-bio #{global.template.authorShortBio}
   .navigation
     ul
       li Menu 1
