--- a/fil-data/template/partials/sidenav.jade
+++ b/fil-data/template/partials/sidenav.jade
@@ -5,5 +5,13 @@
     h2.mini-bio #{global.template.authorShortBio}
   .navigation
     ul
-      li Menu 1
-      li Menu 2
+      each categoryCode in (global.template.featuredCategories || [])
+        -
+          var paths = categoryCode.split("/");
+          var category = global.collections
+            .find(function(x) { return x.id === paths[0]; }).categories
+            .find(function(x) { return x.id === paths[1]; });
+          for (var i = 2; i < paths.length; i++)
+            category = category.subCategories.find(function(x) { return x.id; });
+        li
+          a(href="#{category.paginatedContents[0].url}") #{category.title}
